--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -3,7 +3,7 @@ global:
     # are otherwise defined in the root {style}-style.yaml,
     # themes/color-{theme}.yaml or themes/label-{step} files.
     # This also means {style}-icons.yaml should be imported first.
-    icon_size:          [[13, '14px'], [16, '18px'], [18, '19px']]
+    icon_size:          [[7,[75%,75%]],[12,[100%,100%]],[15,[110%,110%]]]
     text_font_family:   'Quicksand'
     #black_color:        [0.00,0.00,0.00]
     #dark_color:         [0.250,0.250,0.250]
@@ -731,15 +731,15 @@ textures:
             'US:AK-3char': [68, 400, 54, 40]
             'US:AK-4char': [0, 398, 62, 40]
             'US:AK-5char': [892, 348, 68, 40]
-            'US:AL-1char': [592, 104, 44, 44]
-            'US:AL-2char': [544, 104, 44, 44]
+            'US:AL-1char': [592, 106, 44, 44]
+            'US:AL-2char': [544, 106, 44, 44]
             'US:AL-3char': [486, 104, 52, 44]
             'US:AL-4char': [416, 104, 60, 44]
             'US:AL-5char': [344, 104, 68, 44]
-            'US:AR-1char': [298, 104, 40, 40]
-            'US:AR-2char': [247, 104, 42, 42]
+            'US:AR-1char': [296, 104, 40, 40]
+            'US:AR-2char': [246, 104, 42, 42]
             'US:AR-3char': [188, 104, 52, 40]
-            'US:AR-4char': [122, 104, 60, 40]
+            'US:AR-4char': [120, 104, 60, 40]
             'US:AR-5char': [44, 104, 70, 40]
             'US:AZ-1char': [600, 304, 40, 40]
             'US:AZ-2char': [552, 304, 42, 42]
@@ -756,14 +756,14 @@ textures:
             'US:BLM-3char': [718, 0, 70, 32]
             'US:BLM-4char': [632, 0, 78, 32]
             'US:BLM-5char': [540, 0, 82, 32]
-            'US:CA-1char': [882, 584, 38, 44]
-            'US:CA-2char': [127, 630, 44, 44]
-            'US:CA-3char': [65, 630, 54, 44]
+            'US:CA-1char': [880, 584, 38, 44]
+            'US:CA-2char': [126, 630, 44, 44]
+            'US:CA-3char': [64, 630, 54, 44]
             'US:CA-4char': [0, 630, 60, 44]
             'US:CA-5char': [926, 584, 62, 44]
             'US:CO-1char': [976, 492, 42, 42]
-            'US:CO-2char': [924, 492, 45, 44]
-            'US:CO-3char': [862, 492, 54, 42]
+            'US:CO-2char': [924, 492, 44, 44]
+            'US:CO-3char': [862, 494, 54, 42]
             'US:CO-4char': [794, 492, 62, 42]
             'US:CO-5char': [716, 492, 68, 42]
             'US:DC-1char': [0, 104, 38, 52]
@@ -772,7 +772,7 @@ textures:
             'US:DC-4char': [846, 52, 52, 52]
             'US:DC-5char': [780, 52, 60, 52]
             'US:FL-1char': [180, 348, 40, 40]
-            'US:FL-2char': [129, 348, 44, 42]
+            'US:FL-2char': [128, 348, 42, 42]
             'US:FL-3char': [68, 348, 54, 40]
             'US:FL-4char': [0, 348, 60, 40]
             'US:FL-5char': [930, 304, 66, 40]
@@ -816,15 +816,15 @@ textures:
             'US:LA-3char': [798, 104, 56, 50]
             'US:LA-4char': [724, 104, 68, 50]
             'US:LA-5char': [642, 104, 74, 50]
-            'US:MA-1char': [484, 584, 40, 40]
-            'US:CT-1char': [484, 584, 40, 40]
-            'US:IL-1char': [484, 584, 40, 40]
-            'US:TX-1char': [484, 584, 40, 40]
-            'US:IN-1char': [484, 584, 40, 40]
-            'US:RI-1char': [484, 584, 40, 40]
-            'US:ME-1char': [484, 584, 40, 40]
-            'US:WV-1char': [484, 584, 40, 40]
-            'US:MT-1char': [484, 584, 40, 40]
+            'US:MA-1char': [482, 584, 40, 40]
+            'US:CT-1char': [482, 584, 40, 40]
+            'US:IL-1char': [482, 584, 40, 40]
+            'US:TX-1char': [482, 584, 40, 40]
+            'US:IN-1char': [482, 584, 40, 40]
+            'US:RI-1char': [482, 584, 40, 40]
+            'US:ME-1char': [482, 584, 40, 40]
+            'US:WV-1char': [482, 584, 40, 40]
+            'US:MT-1char': [482, 584, 40, 40]
             'US:MA-2char': [432, 584, 46, 38]
             'US:CT-2char': [432, 584, 46, 38]
             'US:IL-2char': [432, 584, 46, 38]
@@ -868,18 +868,18 @@ textures:
             'US:MD-5char': [324, 540, 68, 40]
             'US:MN-1char': [888, 540, 40, 40]
             'US:MN-2char': [836, 540, 46, 40]
-            'US:MN-3char': [773, 540, 54, 40]
+            'US:MN-3char': [772, 540, 54, 40]
             'US:MN-4char': [706, 540, 62, 40]
             'US:MN-5char': [628, 540, 68, 40]
             'US:MO-1char': [508, 398, 40, 40]
-            'US:MO-2char': [451, 398, 48, 40]
+            'US:MO-2char': [450, 398, 48, 40]
             'US:MO-3char': [384, 398, 60, 40]
             'US:MO-4char': [310, 398, 66, 40]
             'US:MO-5char': [230, 398, 74, 40]
             'US:NC-1char': [740, 442, 42, 42]
             'US:MI-1char': [740, 442, 42, 42]
-            'US:NC-2char': [680, 442, 52, 42]
-            'US:MI-2char': [680, 442, 52, 42]
+            'US:NC-2char': [678, 442, 52, 42]
+            'US:MI-2char': [678, 442, 52, 42]
             'US:NC-3char': [610, 442, 62, 44]
             'US:MI-3char': [610, 442, 62, 44]
             'US:NC-4char': [530, 442, 72, 44]
@@ -891,31 +891,31 @@ textures:
             'US:ND-3char': [902, 254, 56, 34]
             'US:ND-4char': [832, 254, 62, 34]
             'US:ND-5char': [750, 254, 72, 34]
-            'US:NE-1char': [808, 202, 40, 40]
-            'US:NE-2char': [760, 202, 42, 42]
-            'US:NE-3char': [704, 202, 50, 40]
-            'US:NE-4char': [640, 202, 56, 40]
-            'US:NE-5char': [566, 202, 66, 40]
-            'US:NH-1char': [274, 540, 42, 42]
+            'US:NE-1char': [802, 202, 40, 40]
+            'US:NE-2char': [752, 202, 42, 42]
+            'US:NE-3char': [696, 202, 50, 40]
+            'US:NE-4char': [632, 202, 56, 40]
+            'US:NE-5char': [558, 202, 66, 40]
+            'US:NH-1char': [272, 540, 42, 42]
             'US:NH-2char': [216, 540, 52, 40]
             'US:NH-3char': [150, 540, 58, 40]
             'US:NH-4char': [78, 540, 64, 40]
             'US:NH-5char': [0, 540, 72, 40]
-            'US:NJ-1char': [190, 584, 40, 40]
-            'US:IA-1char': [190, 584, 40, 40]
-            'US:DE-1char': [190, 584, 40, 40]
-            'US:KY-1char': [190, 584, 40, 40]
-            'US:MS-1char': [190, 584, 40, 40]
-            'US:NJ-2char': [136, 584, 46, 40]
-            'US:IA-2char': [136, 584, 46, 40]
-            'US:DE-2char': [136, 584, 46, 40]
-            'US:KY-2char': [136, 584, 46, 40]
-            'US:MS-2char': [136, 584, 46, 40]
-            'US:NJ-3char': [74, 584, 54, 40]
-            'US:IA-3char': [74, 584, 54, 40]
-            'US:DE-3char': [74, 584, 54, 40]
-            'US:KY-3char': [74, 584, 54, 40]
-            'US:MS-3char': [74, 584, 54, 40]
+            'US:NJ-1char': [190, 586, 40, 40]
+            'US:IA-1char': [190, 586, 40, 40]
+            'US:DE-1char': [190, 586, 40, 40]
+            'US:KY-1char': [190, 586, 40, 40]
+            'US:MS-1char': [190, 586, 40, 40]
+            'US:NJ-2char': [136, 586, 46, 40]
+            'US:IA-2char': [136, 586, 46, 40]
+            'US:DE-2char': [136, 586, 46, 40]
+            'US:KY-2char': [136, 586, 46, 40]
+            'US:MS-2char': [136, 586, 46, 40]
+            'US:NJ-3char': [72, 584, 54, 40]
+            'US:IA-3char': [72, 584, 54, 40]
+            'US:DE-3char': [72, 584, 54, 40]
+            'US:KY-3char': [72, 584, 54, 40]
+            'US:MS-3char': [72, 584, 54, 40]
             'US:NJ-4char': [0, 584, 66, 40]
             'US:IA-4char': [0, 584, 66, 40]
             'US:DE-4char': [0, 584, 66, 40]
@@ -926,17 +926,17 @@ textures:
             'US:DE-5char': [934, 540, 74, 40]
             'US:KY-5char': [934, 540, 74, 40]
             'US:MS-5char': [934, 540, 74, 40]
-            'US:NM-1char': [516, 202, 46, 46]
-            'US:NM-2char': [464, 202, 46, 46]
-            'US:NM-3char': [397, 202, 60, 48]
+            'US:NM-1char': [508, 202, 46, 46]
+            'US:NM-2char': [456, 202, 46, 46]
+            'US:NM-3char': [394, 202, 54, 42]
             'US:NM-4char': [324, 202, 66, 48]
             'US:NM-5char': [244, 202, 72, 48]
             'US:NV-1char': [102, 254, 36, 46]
             'US:NV-2char': [54, 254, 40, 46]
             'US:NV-3char': [0, 254, 48, 48]
-            'US:NV-4char': [926, 202, 56, 46]
-            'US:NV-5char': [856, 202, 64, 46]
-            'US:NY-1char': [530, 584, 36, 44]
+            'US:NV-4char': [918, 202, 56, 46]
+            'US:NV-5char': [848, 202, 64, 46]
+            'US:NY-1char': [528, 584, 36, 44]
             'US:NY-2char': [192, 0, 44, 44]
             'US:NY-3char': [132, 0, 52, 44]
             'US:NY-4char': [66, 0, 58, 44]
@@ -946,14 +946,14 @@ textures:
             'US:OH-3char': [784, 304, 48, 40]
             'US:OH-4char': [718, 304, 58, 40]
             'US:OH-5char': [646, 304, 64, 40]
-            'US:OK-1char': [259, 158, 40, 40]
-            'US:OK-2char': [205, 158, 46, 39]
-            'US:OK-3char': [142, 158, 53, 39]
+            'US:OK-1char': [256, 158, 40, 40]
+            'US:OK-2char': [204, 158, 46, 38]
+            'US:OK-3char': [142, 158, 52, 38]
             'US:OK-4char': [74, 158, 62, 38]
             'US:OK-5char': [0, 158, 70, 38]
             'US:OR-1char': [360, 492, 44, 44]
-            'US:OR-2char': [306, 492, 47, 46]
-            'US:OR-3char': [244, 492, 56, 44]
+            'US:OR-2char': [304, 492, 46, 46]
+            'US:OR-3char': [244, 494, 56, 44]
             'US:OR-4char': [174, 494, 62, 44]
             'US:OR-5char': [100, 494, 66, 44]
             'US:PA-1char': [500, 0, 36, 44]
@@ -961,8 +961,8 @@ textures:
             'US:PA-3char': [384, 0, 56, 44]
             'US:PA-4char': [316, 0, 60, 44]
             'US:PA-5char': [244, 0, 64, 44]
-            'US:SC-1char': [829, 158, 40, 40]
-            'US:SC-2char': [779, 158, 42, 42]
+            'US:SC-1char': [828, 158, 40, 40]
+            'US:SC-2char': [778, 158, 42, 42]
             'US:SC-3char': [722, 158, 50, 40]
             'US:SC-4char': [656, 158, 58, 40]
             'US:SC-5char': [586, 160, 64, 40]
@@ -977,9 +977,9 @@ textures:
             'US:TN-4char': [376, 160, 54, 38]
             'US:TN-5char': [308, 158, 62, 38]
             'US:US-1char': [422, 630, 44, 44]
-            'US:US-2char': [472, 630, 50, 46]
-            'US:US-3char': [347, 630, 66, 46]
-            'US:US-4char': [266, 630, 76, 48]
+            'US:US-2char': [472, 632, 48, 48]
+            'US:US-3char': [346, 632, 66, 48]
+            'US:US-4char': [266, 632, 76, 48]
             'US:US-5char': [178, 630, 80, 48]
             'US:UT-1char': [836, 348, 50, 44]
             'US:UT-2char': [776, 348, 52, 44]
@@ -988,15 +988,15 @@ textures:
             'US:UT-5char': [548, 350, 76, 46]
             'US:VA-1char': [400, 442, 36, 42]
             'US:VA-2char': [350, 442, 42, 42]
-            'US:VA-3char': [292, 442, 50, 42]
+            'US:VA-3char': [292, 444, 50, 42]
             'US:VA-4char': [226, 442, 58, 42]
-            'US:VA-5char': [152, 442, 68, 42]
-            'US:VT-1char': [308, 304, 46, 34]
-            'US:VT-2char': [254, 304, 48, 34]
-            'US:VT-3char': [194, 304, 54, 34]
-            'US:VT-4char': [126, 304, 62, 34]
-            'US:VT-5char': [52, 304, 68, 34]
-            'US:WA-1char': [50, 492, 42, 44]
+            'US:VA-5char': [152, 444, 68, 42]
+            'US:VT-1char': [308, 306, 46, 34]
+            'US:VT-2char': [254, 306, 48, 34]
+            'US:VT-3char': [194, 306, 54, 34]
+            'US:VT-4char': [126, 306, 62, 34]
+            'US:VT-5char': [52, 306, 68, 34]
+            'US:WA-1char': [50, 492, 42, 42]
             'US:WA-2char': [0, 492, 44, 44]
             'US:WA-3char': [942, 442, 56, 46]
             'US:WA-4char': [870, 442, 66, 46]
